# xf86-input-egalax

./: .gitignore  README.md  configure.ac
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
man/: Makefile.am  egalax.man  egalax.man.in
src/: Makefile.am  egalax.c
