dnl SPDX-License-Identifier: MIT OR X11
dnl
dnl Copyright © 2026 Enrico Weigelt, metux IT consult <info@metux.net>
AC_PREREQ(2.57)
AC_INIT([xlibre-xf86-input-egalax],
        25.0.0,
        [https://github.com/X11Libre/xf86-input-egalax/issues])

XLIBRE_INIT_MODULE_AM(egalax)

AC_OUTPUT([Makefile src/Makefile man/Makefile man/egalax.man])
